--- a/Businness/Businness.csproj
+++ b/Businness/Businness.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Endereco.cs" />
+    <Compile Include="Produto.cs" />
     <Compile Include="Pessoa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
